fixed drop down and general setup on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ body {
 
 .container {
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   height: calc(100vh - 120px);
 }
 
@@ -145,10 +145,16 @@ body {
   font-size: 20px;
   font-family: 'Roboto', sans-serif;
   margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+  padding: 5px;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
 }
 
 .colorThemeMenu {
-  margin-top: 20px;
   display: flex;
   flex-direction: row;
   align-items: stretch;
@@ -159,6 +165,8 @@ body {
   background-color: rgba(0, 0, 0, 0);
   margin-left: 10px;
   margin-right: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
   height: 30px;
   border-radius: 15px;
   flex-grow: 1;
@@ -183,6 +191,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 1.5rem;
   transition-duration: 0.2s;
+  text-align: left;
 }
 
 .dropDownButton:hover {
